fix margin on mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -125,4 +125,7 @@ body, html {
   .tabcontent{
     width: 100%;
   }
+  .info{
+    margin-right: 0;
+  }
 }
